# tuipyter

./: Cargo.toml  README.md  flake.nix
src/: datatypes.rs  lib.rs  main.rs  widgets.rs
