[package]
name = "tuipyter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
jupyter-protocol = { git = "https://github.com/runtimed/runtimed", version = "0.8.1" }
ratatui = "0.29.0"
runtimelib = { git = "https://github.com/runtimed/runtimed", version = "0.28.0", features = ["tokio", "tokio-runtime"] }
rustyline-async = "0.4.7"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.0"
unicode-width = "0.2.0"
